--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    
+    <link rel="icon" href="youRL-logo.jpg"/>
     <title>youRL</title>
   </head>
   <body>
